force-app/main/default/objects/Art_Request_Form__c/Art_Request_Form__c.object-meta.xml
<CustomObject>
    <label>Art Request Form CSA and Conceptual</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Art Request Form  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Art Request Forms CSA and Conceptual</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>