force-app/main/default/objects/Art_Request_Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Art Request Forms CSA and Conceptual (Account)</relationshipLabel>
    <relationshipName>Art_Request_Forms_CSA_and_Conceptual1</relationshipName>
    <type>Lookup</type>
</CustomField>