force-app/main/default/objects/Art_Request_Form__c/fields/Client_ordering_more_than_1_garment__c.field-meta.xml
<CustomField>
    <fullName>Client_ordering_more_than_1_garment__c</fullName>
    <description>Is the Client ordering more than 1 color garment?</description>
    <label>Client ordering more than 1 garment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>