force-app/main/default/objects/Art_Request_Form__c/fields/Garment_Information__c.field-meta.xml
<CustomField>
    <fullName>Garment_Information__c</fullName>
    <label>Garment Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>