force-app/main/default/objects/Art_Request_Form__c/fields/Is_the_Client_Ordering_more_that__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Client_Ordering_more_that__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the Client ordering more than one col</label>
    <type>Checkbox</type>
</CustomField>