force-app/main/default/objects/Art_Request_Form__c/fields/My_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Order</label>
    <referenceTo>portal_my_order__c</referenceTo>
    <relationshipLabel>Art Request Forms CSA and Conceptual</relationshipLabel>
    <relationshipName>Art_Request_Forms_CSA_and_Conceptual</relationshipName>
    <type>Lookup</type>
</CustomField>