force-app/main/default/objects/Art_Request_Form__c/fields/Number_of_Inks_Other__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Inks_Other__c</fullName>
    <label>Number of Inks?(Other)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>