force-app/main/default/objects/Art_Request_Form__c/fields/Print_Location__c.field-meta.xml
<CustomField>
    <fullName>Print_Location__c</fullName>
    <label>Print Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL FRONT</fullName>
            </value>
            <value>
                <fullName>LEFT CREST</fullName>
            </value>
            <value>
                <fullName>FULL BACK</fullName>
            </value>
            <value>
                <fullName>LOCKER TAG</fullName>
            </value>
            <value>
                <fullName>LEFT SLEEVE</fullName>
            </value>
            <value>
                <fullName>RIGHT SLEEVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>