force-app/main/default/objects/Art_Request_Form__c/fields/Sticker_Art_Needed__c.field-meta.xml
<CustomField>
    <fullName>Sticker_Art_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sticker Art Needed</label>
    <type>Checkbox</type>
</CustomField>