force-app/main/default/objects/Art_Request_Form__c/fields/Summary_of_Sleeve__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Sleeve__c</fullName>
    <label>Summary of Sleeve</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>