force-app/main/default/objects/Art_Request_Form__c/fields/What_color_inks__c.field-meta.xml
<CustomField>
    <fullName>What_color_inks__c</fullName>
    <label>What color inks?(other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>