force-app/main/default/objects/Art_Request_Form__c/fields/What_color_inks_on_the_sleeve__c.field-meta.xml
<CustomField>
    <fullName>What_color_inks_on_the_sleeve__c</fullName>
    <label>What color inks on the sleeve?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>