force-app/main/default/objects/Art_Request_Form__c/fields/What_Ink_colors_Are_Being_Used__c.field-meta.xml
<CustomField>
    <fullName>What_Ink_colors_Are_Being_Used__c</fullName>
    <label>What Ink colors Are Being Used?(Front)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAME AS CSA</fullName>
            </value>
            <value>
                <fullName>SAME AS TEMPLATE</fullName>
            </value>
            <value>
                <fullName>WHITE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>