force-app/main/default/objects/Art_Request_Form__c/fields/What_Ink_colors_Are_Being_Used_Other__c.field-meta.xml
<CustomField>
    <fullName>What_Ink_colors_Are_Being_Used_Other__c</fullName>
    <label>What Ink colors Are Being Used?(Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>